# nuvemshop-mcp-server

./: .dockerignore  .env.exemple  .gitignore  Dockerfile  Makefile  Quick-Start-Guide.md  README.md  client-example.md  deploy-guide.md  implementation.md  main.py  product-variant-guide.md  pyproject.toml  requirements.txt  sse-x-streamble.md  start.sh
