[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiendanube-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol server for interacting with the Tiendanube/Nuvemshop API"
authors = [{name = "Alexandre Proença", email = "alexandre.proenca@ee.dev.br"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "requests",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy"
]

[project.scripts]
tiendanube-mcp-server = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.black]
line-length = 160
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
